manifests/use-cases-common-default-ns/07-tls-passthrough/dp-tls-passthrough-echoserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: passthrough-echoserver
  labels:
    run: passthrough-echoserver
spec:
  ports:
    - port: 443
      targetPort: 8443
      protocol: TCP
  selector:
    run: passthrough-echoserver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passthrough-echoserver
spec:
  selector:
    matchLabels:
      run: passthrough-echoserver
  replicas: 1
  template:
    metadata:
      labels:
        run: passthrough-echoserver
    spec:
      containers:
        - name: passthrough-echoserver
          image: gcr.io/k8s-staging-gateway-api/echo-basic:v20231214-v1.0.0-140-gf544a46e
          ports:
            - containerPort: 8443
          volumeMounts:
            - name: server-certs
              mountPath: /etc/server-certs
              readOnly: true
      volumes:
        - name: server-certs
          secret:
            secretName: server-certs
